# eduk8ulabs

./: .gitignore  Caddyfile  DeploymentPlan.md  ExecutiveSummary.md  LAUNCH_READY.md  LAUNCH_REPORT.md  README.md  RECOVERY_STATE.md  SECURITY_AUDIT_REPORT.md  deploy-genesis.sh  deploy.sh  deploy_expect.exp  deploy_fix.sh  deploy_os.sh  deploy_production.sh  docker-compose.enterprise.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  finalize_routing.sh  fix_nginx.sh  ignite-vps.sh  migrate.js  package-lock.json  package.json  run_deploy.exp  run_migration.js  setup-secrets.sh  start-backend.sh  start-titan.sh  test_empty_passphrase.py  test_first_strike.ts  test_nemo.ts  test_passphrase.py  test_ssh.py  titan-backup.sh  turbo.json  v1-audit-check.ts
.github/workflows/: build-native.yml  cd.yml  ci.yml  deploy-prod.yml  titan-deploy.yml
.turbo/cache/: 0a851f754eff97eb-manifest.json  0a851f754eff97eb-meta.json  0bdd2edbaa98d990-manifest.json  0bdd2edbaa98d990-meta.json  11b687390aa05c13-manifest.json  11b687390aa05c13-meta.json  11b687390aa05c13.tar.zst  1229315d5f55076b-manifest.json  1229315d5f55076b-meta.json  1229315d5f55076b.tar.zst  18a014cb696b1345-manifest.json  18a014cb696b1345-meta.json  28dd1436915f21f5-manifest.json  28dd1436915f21f5-meta.json  2cd4f72f7ebf3c09-manifest.json  2cd4f72f7ebf3c09-meta.json  2cd4f72f7ebf3c09.tar.zst  2d68a26782d345ef-manifest.json  2d68a26782d345ef-meta.json  322ec4f1891d99b5-manifest.json  322ec4f1891d99b5-meta.json  322ec4f1891d99b5.tar.zst  (+136 more)
deploy/: Dockerfile  Dockerfile.ironclad.router  Dockerfile.ironclad.web  docker-compose.enterprise.yml
docs/: CISO_COLD_EMAIL.md  EDGE_INTEGRATION.md  ENTERPRISE_DEPLOYMENT.md  EXECUTIVE_PITCH_DECK.md  OPERATIONS.md  PILOT_ROADMAP.md  PITCH_DECK.md  READY.md  SALES_OUTREACH.md  SOVEREIGN_SECURITY.md  STREETMP_WHITEPAPER.md
enclave/: Cargo.toml  build-enclave.sh  build.sh  run-enclave.sh
enclave/nitro-tokenizer/: Cargo.toml  Dockerfile.enclave
enclave/nitro-tokenizer/src/: guardrail.rs  main.rs  memory_firewall.rs  proofs.rs  protocol.rs  receipt.rs  sanitizer.rs  shamir.rs  telemetry.rs  trust_engine.rs
monitoring/: prometheus.yml
scripts/: autoscale-monitor.ts  backup.sh  benchmark-cache.sh  check-billing-ledger.sh  deploy-genesis.sh  deploy-prod.sh  final-health-check.sh  genesis-boot.ts  genesis.sh  glass-box-demo.ts  harden-images.sh  harden-server.sh  leviathan-outreach.ts  package-sdc.sh  rolling-deploy.sh  smoke-test.sh  stress-test.ts  system-check.py  validate-prod-env.sh
(+655 files in other folders)
